tests/rosetta/out/Smalltalk/atomic-updates.out
/workspace/mochi/tests/rosetta/out/Smalltalk/atomic-updates.st:8: parse error, expected '|' or identifier
